# datainourworld

./: README.md  main.py  pyproject.toml  requirements.txt
assets/0_data/: AfterTrump.csv  BeforeTrump.csv  BeforeTrump_Bar.csv  BeforeTrump_Table.csv
pages/: 00_Tariffs.py  01_Shootings.py
