[project]
name = "datainourworld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "plotly>=6.0.1",
    "st-pages>=1.0.1",
    "streamlit>=1.44.1",
    "streamlit-discourse>=0.1.3",
    "streamlit-shadcn-ui>=0.1.18",
    "streamlit-tags>=1.2.8",
]
